load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sysprobe_lib",
    srcs = ["main.go"],
    importpath = "github.com/ZalgoNoise/sysprobe",
    visibility = ["//visibility:private"],
    deps = ["//probe"],
)

go_binary(
    name = "sysprobe",
    embed = [":sysprobe_lib"],
    visibility = ["//visibility:public"],
)
