load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sysprobe_lib",
    srcs = ["main.go"],
    importpath = "github.com/ZalgoNoise/sysprobe",
    visibility = ["//visibility:private"],
    deps = ["//probe"],
)

go_binary(
    name = "sysprobe",
    embed = [":sysprobe_lib"],
    visibility = ["//visibility:public"],
)

platform(
    name = "x64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "x86",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86",
    ],
)

platform(
    name = "arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "arm",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm",
    ],
)